--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Rubik', sans-serif;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.details{
+  -webkit-box-shadow: 10px 10px 63px -28px rgba(0,0,0,0.75);
+  -moz-box-shadow: 10px 10px 63px -28px rgba(0,0,0,0.75);
+  box-shadow: 10px 10px 63px -28px rgba(0,0,0,0.75);;
+  box-sizing: border-box;
+  border-radius:25px;
+  margin-top:20px;
+}
+.col:not(#last){
+  border-right:1px solid black;
 }
