--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,36 @@
 body {
   margin: 0;
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-.details{
-  -webkit-box-shadow: 10px 10px 63px -28px rgba(0,0,0,0.75);
-  -moz-box-shadow: 10px 10px 63px -28px rgba(0,0,0,0.75);
-  box-shadow: 10px 10px 63px -28px rgba(0,0,0,0.75);;
+.details {
+  -webkit-box-shadow: 10px 10px 63px -28px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 10px 63px -28px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px 10px 63px -28px rgba(0, 0, 0, 0.75);
   box-sizing: border-box;
-  border-radius:5px;
-  background:white;
-
+  border-radius: 5px;
+  background: white;
 }
-.col:not(#last){
-  border-right:1px solid black;
+.col:not(#last) {
+  border-right: 1px solid black;
 }
-#mapid { height: 180px; }
+#mapid {
+  height: 180px;
+}
+.card {
+  width: 100%;
+  height: 100%;
+  -webkit-box-shadow: 10px 10px 72px -51px rgba(0,0,0,0.75);
+  -moz-box-shadow: 10px 10px 72px -51px rgba(0,0,0,0.75);
+  box-shadow: 10px 10px 72px -51px rgba(0,0,0,0.75);
+}
+.card img {
+  width: 100%;
+}
+.text {
+  text-decoration: none;
+}
